tests/rosetta/out/Pascal/anonymous-recursion-2.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/anonymous-recursion-2.pas
anonymous-recursion-2.pas(34,7) Error: Identifier not found "i"
anonymous-recursion-2.pas(36,9) Error: Identifier not found "i"
anonymous-recursion-2.pas(38,33) Error: Identifier not found "i"
anonymous-recursion-2.pas(41,33) Error: Identifier not found "i"
anonymous-recursion-2.pas(41,60) Error: Identifier not found "i"
anonymous-recursion-2.pas(49) Fatal: There were 5 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
