tests/rosetta/out/Pascal/anonymous-recursion-2.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:07Z
program AnonymousRecursion2;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function fib(n: integer): integer;
var
  a: integer;
  b: integer;
  i: integer;
  t: integer;
begin
  if (n < 2) then ;
  a := 0;
  b := 1;
  i := 1;
  while (i < n) do
  begin
    t := a + b;
    a := b;
    b := t;
    i := i + 1;
  end;
  result := b;
  exit;
end;

function main(): integer;
begin
  for i in specialize TArray<integer>([-1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]) do
  begin
    if (i < 0) then
    begin
      writeln('fib(' + IntToStr(i) + ') returned error: negative n is forbidden');
    end else
    begin
      writeln('fib(' + IntToStr(i) + ') = ' + IntToStr(fib(i)));
    end;
  end;
end;

begin
  main();
end.
